libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-generic-struct.jsonc
//@ run: fail
//@ description: A complex type (like struct) should fail to be expanded
[
  "::kernel::special_form::type",
  "Foo<(a: String)>",
  //~^ ERROR expected a simple type parameter
  { "#struct": { "foo": "Integer" } },
  "_"
]
